# comp_7500_project_2

./: .gitignore  CMakeLists.txt  README.md  build.sh  project_2_mtm0002.md
cmake/: Config.h.in  cmake_includes.cmake  compiler.cmake  includes.cmake  libraries.cmake  paths.cmake
pwordcount/: CMakeLists.txt  PWordCount.c  PWordCount.h  PWordCountDriver.c  PWordCount_test.cpp
pwordcount/Child/: CMakeLists.txt  Child.c  Child.h  ChildDriver.c  Child_test.cpp
pwordcount/Parent/: CMakeLists.txt  Parent.c  Parent.h  ParentDriver.c  Parent_test.cpp
pwordcount/Pipelining/: CMakeLists.txt  Pipelining.c  Pipelining.h  PipeliningDriver.c  Pipelining_test.cpp
